# swarm-mcp

./: .gitignore  404.html  CODEREVIEW.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml
concepts/combinators/: index.html
concepts/governors/: index.html
concepts/mcps/: index.html
concepts/pipelines/: index.html
concepts/refs/: index.html
concepts/resources/: index.html
concepts/sandboxes/: index.html
concepts/types/: index.html
contributing/: index.html
docs/: contributing.md  index.md  installation.md  observability.md  quickstart.md  security.md
docs/concepts/: combinators.md  governors.md  mcps.md  pipelines.md  refs.md  resources.md  sandboxes.md  types.md
docs/examples/: code-review.md  gpu-pipeline.md  research.md
examples/code-review/: index.html
examples/gpu-pipeline/: index.html
examples/research/: index.html
hooks/: log-artifacts.sh
installation/: index.html
observability/: index.html
quickstart/: index.html
search/: search_index.json
security/: index.html
src/swarm_mcp/: __init__.py  agent.py  docker.py  governors.py  monads.py  registry.py  sandbox.py  server.py  stamps.py  tools.py  types.py
types/: analysis-report.md  code-review.md  research-notes.md  structured-json.md
