[project]
name = "swarm-mcp"
version = "0.1.0"
description = "MCP server for orchestrating parallel Claude agent workloads via Docker containers"
authors = [
    { name = "Alex Hodge", email = "alex.hodge@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]",
    "cryptography",
]

[project.scripts]
swarm-mcp = "swarm_mcp.server:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]
